# DemoAll

./: .gitignore  build.gradle  cf_resources.txt  dnf_resources.txt  gradle.properties  my_config.gradle  settings.gradle
sample/: CMakeLists.txt  build.gradle  proguard-rules.pro  sample.jks  tpns-configs.json
sample/src/debug/: AndroidManifest.xml
sample/src/main/: AndroidManifest.xml
sample/src/main/assets/: Base64.txt  JavaAndJavaScriptCall.html  index.js  index2.js
sample/src/main/cpp/: crash.cpp  native-lib.cpp
sample/src/main/debug/: AndroidManifest.xml
sample/src/main/jni/: Android.mk  Application.mk  com_canzhang_sample_manager_jni_JNITest.h  test.c  说明.md
sample/src/main/res/drawable/: sample_consume_application_header_point.xml  sample_default_point.xml  sample_selector_btn_bg.xml  sample_shadow_bg_02.xml  sample_shadow_bg_03.xml  sample_shadow_bg_04.xml  sample_shape_selected_icon.xml  sample_shape_unselected_icon.xml  sample_viewpager_indicator_selector.xml  splash_animate_icon.xml
sample/src/main/res/layout/: activity_fullscreen.xml  activity_kotlin_test.xml  activity_weex.xml  sample_activity_application.xml  sample_activity_behavior_test.xml  sample_activity_bind_test.xml  sample_activity_component_list.xml  sample_activity_container.xml  sample_activity_flutter_test.xml  sample_activity_google_life_cycle_test.xml  sample_activity_life_test.xml  sample_activity_live_data_test.xml  sample_activity_notification.xml  sample_activity_qrcode.xml  sample_activity_recyclerview.xml  sample_activity_socket_test.xml  sample_activity_task_test.xml  sample_activity_translate.xml  sample_activity_viewpager.xml  sample_app_item_01.xml  sample_app_item_02.xml  sample_custom_banner_vp.xml  (+26 more)
(+752 files in other folders)
